// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BelongsTo create empty 1`] = `
BelongsTo {
  "store": Immutable.Record {
    "name": null,
    "title": null,
    "description": null,
    "fields": null,
    "opposite": null,
    "belongsTo": null,
    "single": true,
    "stored": true,
    "embedded": true,
    "fullName": null,
    "normalName": null,
    "shortName": null,
  },
}
`;

exports[`BelongsTo create empty 2`] = `
Object {
  "embedded": true,
  "single": true,
  "stored": true,
}
`;

exports[`BelongsTo toJS with dupes 1`] = `
Object {
  "embedded": true,
  "fields": Array [
    Object {
      "name": "one",
    },
  ],
  "single": true,
  "stored": true,
}
`;

exports[`BelongsTo updates strings 1`] = `
BelongsTo {
  "store": Immutable.Record {
    "name": "cool",
    "title": "very cool title",
    "description": "very cool",
    "fields": null,
    "opposite": null,
    "belongsTo": null,
    "single": true,
    "stored": true,
    "embedded": true,
    "fullName": null,
    "normalName": null,
    "shortName": null,
  },
}
`;
